--- a/SUSY_data_qml/quantum_classifier.ipynb
+++ b/SUSY_data_qml/quantum_classifier.ipynb
@@ -2405,7 +2405,7 @@
     "\n",
     "With just using 2 qubit, we obtained AUC of 0.8488 on testing dataset with 5000 training and testing samples, trained and tested using a simulator. We also tested (inferenced) to run the circuit on Rigetti's Aspen-9 QPU provided by AWS using the already optimized parameter to predict 2000 samples of test dataset and we obtained AUC of 0.8298.\n",
     "\n",
-    "Comparing our project with the work done in [2], we may conclude that we were able to obtain better results. The AUC obtained from the simulators are also very close to the one obtained from running the test/inference on the real quantum hardware."
+    "Comparing this project with the work done in [2], we may conclude that we were able to obtain better results. The AUC obtained from the simulators are also very close to the one obtained from running the test/inference on the real quantum hardware."
    ]
   },
   {
@@ -2416,7 +2416,7 @@
    "source": [
     "### Acknowledgment \n",
     "\n",
-    "This work is submitted to the QHack 2021 organized by Xanadu. During the hackathon, we had the opportunity to learn and implement ideas in the field of QML. It was a pleasure to be part of this hackathon, and as a team, we would like to thank all the speakers for their valuable presentations and the Xanadu team for organizing an amazing event."
+    
    ]
   },
   {
@@ -2425,10 +2425,9 @@
     "id": "du6PWY8YeIuE"
    },
    "source": [
-    "Source code\n",
+    ,
     "\n",
-    "This notebook is the clean version of the code that by itself should be enough to reproduce the results, but all the testing/temporary codes and other files used in this project are available at the\n",
-    "[GitHub Repo](https://github.com/VoicuTomut/Event-Classification-with-data-reuploading-in-High-Energy-Physics)."
+    
    ]
   },
   {
