--- a/qcd_classification/Qiskit_actual_hardware (1).ipynb
+++ b/qcd_classification/Qiskit_actual_hardware (1).ipynb
@@ -562,7 +562,7 @@
         "\n",
         "#dev_rigetti_aws = qml.device('braket.aws.qubit', device_arn=device_rigetti, shots=10000, wires=n_qubits, s3_destination_folder=s3_folder)\n",
         "#dev_rigetti_aws = qml.device(\"default.qubit\", wires=n_qubits, shots=10000)\n",
-        "dev_rigetti_aws =  qml.device('qiskit.ibmq', wires=n_qubits, backend='ibmq_manila', ibmqx_token=\"6834a85b6eef4500c39371983dc17feec0ec055e763d50ad7156d5b291d05e8a56cc6c2e09e5ef2e7608c58a04a700addcd6a1fe9c9d3dbcea7783a7222fdc38\")\n",
+        "dev_rigetti_aws =  qml.device('qiskit.ibmq', wires=n_qubits, backend='ibmq_manila', ibmqx_token=\"Enter Your Token Here\")\n",
         "\n",
         "wires = dev_rigetti_aws.wires.tolist()\n",
         "\n",
